[package]
name = "agenda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.5.3"
anyhow = "1.0.40"
thiserror = "1.0.24"
rrule = "0.5.9"
ansi_term = "0.12"

[dependencies.ical]
version = "0.7.0"
default-features = false
features = ["ical"]

[profile.release]
lto = "thin"
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
