[package]
name = "agenda"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
chrono-tz = "0.5.3"
anyhow = "1.0.99"
rrule = "0.5.9"
ansi_term = "0.12"
ureq = "2.12.1"
expanduser = "1.2.2"
fs-err = "3.1.1"

[dependencies.ical]
version = "0.7.0"
default-features = false
features = ["ical"]

[profile.release]
lto = "thin"
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
